adapted PB-XPINN

--- a/tests/bemppx.ipynb
+++ b/tests/bemppx.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "        -0.22323286, -0.99652132]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,6 +141,38 @@
     "    p1_space, p1_space, dp0_space)\n",
     "slp = bempp.api.operators.boundary.laplace.single_layer(\n",
     "    dp0_space, p1_space, dp0_space)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7.65751522e-05, 3.18384380e-05, 1.78710068e-06, ...,\n",
+       "        5.50307036e-07, 5.42119488e-07, 5.14112013e-07],\n",
+       "       [3.18384215e-05, 6.30174870e-05, 1.61491832e-06, ...,\n",
+       "        4.86415305e-07, 4.76752605e-07, 4.52206920e-07],\n",
+       "       [1.78710068e-06, 1.61491832e-06, 7.77037543e-05, ...,\n",
+       "        6.36053571e-07, 5.95586103e-07, 5.72076670e-07],\n",
+       "       ...,\n",
+       "       [5.50307036e-07, 4.86415305e-07, 6.36053571e-07, ...,\n",
+       "        3.45146619e-05, 1.58266823e-06, 1.51638419e-06],\n",
+       "       [5.42119488e-07, 4.76752605e-07, 5.95586103e-07, ...,\n",
+       "        1.58266823e-06, 3.41470484e-05, 1.38804511e-05],\n",
+       "       [5.14112013e-07, 4.52206920e-07, 5.72076670e-07, ...,\n",
+       "        1.51638419e-06, 1.38804542e-05, 3.15988126e-05]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slp.weak_form().A"
    ]
   },
   {
@@ -154,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,16 +199,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\achom\\Desktop\\Main\\Code\\Scientific-Computing\\Physics-Neural-Networks\\PINN\\.venv\\lib\\site-packages\\scipy\\sparse\\linalg\\_dsolve\\linsolve.py:394: SparseEfficiencyWarning: splu converted its input to CSC format\n",
+      "  warn('splu converted its input to CSC format', SparseEfficiencyWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(1610,)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,25 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\achom\\Desktop\\Main\\Code\\Scientific-Computing\\Physics-Neural-Networks\\PINN\\.venv\\lib\\site-packages\\scipy\\sparse\\linalg\\_dsolve\\linsolve.py:394: SparseEfficiencyWarning: splu converted its input to CSC format\n",
-      "  warn('splu converted its input to CSC format', SparseEfficiencyWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rhs = (.5 * identity + dlp) * dirichlet_fun "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +280,7 @@
        "         0.        ,  0.        ]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +327,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on PotentialOperator in module bempp.api.assembly.potential_operator object:\n",
+      "\n",
+      "class PotentialOperator(builtins.object)\n",
+      " |  PotentialOperator(potential_evaluator)\n",
+      " |  \n",
+      " |  Provides an interface to potential operators.\n",
+      " |  \n",
+      " |  This class is not supposed to be instantiated directly.\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __add__(self, obj)\n",
+      " |      Add.\n",
+      " |  \n",
+      " |  __init__(self, potential_evaluator)\n",
+      " |      Construct. Should not be called by the user.\n",
+      " |  \n",
+      " |  __matmul__(self, obj)\n",
+      " |      Multiply.\n",
+      " |  \n",
+      " |  __mul__(self, obj)\n",
+      " |      Multiply.\n",
+      " |  \n",
+      " |  __neg__(self)\n",
+      " |      Negate.\n",
+      " |  \n",
+      " |  __rmul__(self, obj)\n",
+      " |      Reverse multiply.\n",
+      " |  \n",
+      " |  __sub__(self, other)\n",
+      " |      Subtract.\n",
+      " |  \n",
+      " |  evaluate(self, grid_fun)\n",
+      " |      Apply the potential operator to a grid function.\n",
+      " |      \n",
+      " |      Parameters\n",
+      " |      ----------\n",
+      " |      grid_fun : bempp.api.GridFunction\n",
+      " |          A GridFunction object that represents the boundary density to\n",
+      " |          which the potential is applied to.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Readonly properties defined here:\n",
+      " |  \n",
+      " |  component_count\n",
+      " |      Return number of components of the potential (1 for scalar potentials).\n",
+      " |  \n",
+      " |  evaluation_points\n",
+      " |      Return the evaluation points.\n",
+      " |  \n",
+      " |  space\n",
+      " |      Return the underlying function space.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(slp_pot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +414,7 @@
        "(1, 22500)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,16 +425,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x17e123ebf10>"
+       "<matplotlib.colorbar.Colorbar at 0x20eda02ac40>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
