--- a/code/Post/post_dev.ipynb
+++ b/code/Post/post_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,13 +85,12 @@
     "\n",
     "sim.create_simulation()\n",
     "\n",
-    "\n",
     "XPINN_solver = sim.XPINN_solver"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +122,7 @@
     "        u2 = XPINN_solver.solver2.model(verts)\n",
     "    u_mean = (u1+u2)/sum(domains)\n",
     "    return u_mean.numpy()\n",
-    "values = u_value(vertices)\n",
+    "u_values = u_value(vertices)\n",
     "\n",
     "def du_value(verts):\n",
     "    solver1 = XPINN_solver.solver1\n",
@@ -141,7 +140,75 @@
     "\n",
     "    return du_prom.numpy()\n",
     "\n",
-    "d_values = du_value(vertices)\n"
+    "du_values = du_value(vertices)\n",
+    "\n",
+    "u_values = np.reshape(u_values,(np.size(u_values)))\n",
+    "du_values = np.reshape(du_values,(np.size(du_values)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_list = XPINN_solver.PDE.q_list\n",
+    "n = len(q_list)\n",
+    "qs = np.zeros(n)\n",
+    "x_qs = np.zeros((n,3))\n",
+    "for i,q in enumerate(q_list):\n",
+    "    qs[i] = q.q\n",
+    "    x_qs[i,:] = q.x_q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bempp.api\n",
+    "import trimesh\n",
+    "\n",
+    "mesh = trimesh.Trimesh(vertices=vertices, faces=elements)\n",
+    "\n",
+    "mesh.export(\"molecule.stl\", file_type=\"stl\")\n",
+    "\n",
+    "grid = bempp.api.import_grid(\"molecule.stl\")\n",
+    "os.remove(\"molecule.stl\")\n",
+    "\n",
+    "space = bempp.api.function_space(grid, \"P\", 1)\n",
+    "dirichl_space = space\n",
+    "neumann_space = space\n",
+    "\n",
+    "slp_q = bempp.api.operators.potential.laplace.single_layer(neumann_space, x_qs.transpose())\n",
+    "dlp_q = bempp.api.operators.potential.laplace.double_layer(dirichl_space, x_qs.transpose())\n",
+    "\n",
+    "phi = bempp.api.GridFunction(space, coefficients=u_values)\n",
+    "dphi = bempp.api.GridFunction(space, coefficients=du_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-10.91702366271725"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phi_q = slp_q * dphi - dlp_q * phi\n",
+    "\n",
+    "G_solv = 2 * np.pi * 332.064 * np.sum(qs * phi_q).real\n",
+    "G_solv"
    ]
   },
   {
