--- a/code/Post/post_dev.ipynb
+++ b/code/Post/post_dev.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,13 +142,13 @@
     "\n",
     "du_values = du_value(vertices)\n",
     "\n",
-    "u_values = np.reshape(u_values,(np.size(u_values)))\n",
-    "du_values = np.reshape(du_values,(np.size(du_values)))"
+    "u_values = u_values.flatten()\n",
+    "du_values = du_values.flatten()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "-10.91702366271725"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
