--- a/code/Post/post_dev.ipynb
+++ b/code/Post/post_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,19 +163,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import bempp.api\n",
-    "import trimesh\n",
     "\n",
-    "mesh = trimesh.Trimesh(vertices=vertices, faces=elements)\n",
-    "\n",
-    "mesh.export(\"molecule.stl\", file_type=\"stl\")\n",
-    "\n",
-    "grid = bempp.api.import_grid(\"molecule.stl\")\n",
-    "os.remove(\"molecule.stl\")\n",
+    "grid = bempp.api.Grid(vertices.transpose(), elements.transpose())\n",
     "\n",
     "space = bempp.api.function_space(grid, \"P\", 1)\n",
     "dirichl_space = space\n",
@@ -190,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-10.91702366271725"
+       "-10.94214356867497"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
