--- a/code/Post/results.ipynb
+++ b/code/Post/results.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
     "def get_last_iteration_losses(loss_csv_path):\n",
     "    df = pd.read_csv(loss_csv_path)\n",
     "    last_row = df.iloc[-1]\n",
-    "    losses = last_row[['TL', 'R1', 'D1', 'N1', 'K1', 'Q', 'R2', 'D2', 'N2', 'K2', 'Iu', 'Id', 'G', 'E', 'P1', 'P2']]\n",
+    "    losses = last_row[list(df.columns)]\n",
     "    return losses\n",
     "\n",
     "def read_results_json(folder_path):\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
     "filter_list = ['Gsolv_value','L2_analytic','Iu','Id','Loss_NN1', 'Loss_NN2']\n",
     "df_filtered = df.filter(filter_list)\n",
     "\n",
-    "excel_file_path = 'results.xlsx'\n",
+    "excel_file_path = 'results_temp.xlsx'\n",
     "with pd.ExcelWriter(excel_file_path, engine='xlsxwriter') as writer:\n",
     "    df.to_excel(writer, sheet_name='Complete', index=True)\n",
     "    df_filtered.to_excel(writer, sheet_name='Filtered', index=True)"
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "S34  2.060000e-01  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
