--- a/code/Post/results.ipynb
+++ b/code/Post/results.ipynb
@@ -78,11 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folders = ['SIMS_1','SIMS_2','SIMS_3','SIMS_4','SIMS_5']\n",
+    "folders = ['SIMS_1','SIMS_2','SIMS_3','SIMS_4','SIMS_5','SIMS_6']\n",
     "data = dict()\n",
     "for folder in folders:\n",
     "    folder_path = os.path.join(results_dir,folder)\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -553,6 +553,69 @@
        "      <td>7.947000e+00</td>\n",
        "      <td>4.568000e+02</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>S71</th>\n",
+       "      <td>-43.004</td>\n",
+       "      <td>137.600</td>\n",
+       "      <td>2.408000e-04</td>\n",
+       "      <td>1.642000e-05</td>\n",
+       "      <td>2.068000e-05</td>\n",
+       "      <td>5.935000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>S72</th>\n",
+       "      <td>13.165</td>\n",
+       "      <td>349.200</td>\n",
+       "      <td>1.809000e-03</td>\n",
+       "      <td>1.849000e-03</td>\n",
+       "      <td>4.890000e-02</td>\n",
+       "      <td>6.761000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>S73</th>\n",
+       "      <td>4.579</td>\n",
+       "      <td>1061.000</td>\n",
+       "      <td>3.225000e-02</td>\n",
+       "      <td>1.417000e-01</td>\n",
+       "      <td>9.391000e+02</td>\n",
+       "      <td>1.081000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>S74</th>\n",
+       "      <td>-41.351</td>\n",
+       "      <td>6.158</td>\n",
+       "      <td>1.409000e-04</td>\n",
+       "      <td>5.206000e-04</td>\n",
+       "      <td>5.330000e+00</td>\n",
+       "      <td>1.661000e-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>S75</th>\n",
+       "      <td>-18.919</td>\n",
+       "      <td>285.600</td>\n",
+       "      <td>4.598000e-03</td>\n",
+       "      <td>9.482000e-03</td>\n",
+       "      <td>1.491000e+01</td>\n",
+       "      <td>7.854000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>S76</th>\n",
+       "      <td>249.467</td>\n",
+       "      <td>1214.000</td>\n",
+       "      <td>3.340000e-02</td>\n",
+       "      <td>8.266000e-03</td>\n",
+       "      <td>1.024000e-01</td>\n",
+       "      <td>1.866000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>S77</th>\n",
+       "      <td>-29.224</td>\n",
+       "      <td>3.044</td>\n",
+       "      <td>4.540000e-06</td>\n",
+       "      <td>1.238000e-07</td>\n",
+       "      <td>2.253000e-08</td>\n",
+       "      <td>2.505000e-06</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -605,6 +668,13 @@
        "S59       -0.126       54.080     1.739000e-03      3.462000e-03   \n",
        "S60      -14.593      840.400     2.929000e-02      8.418000e-03   \n",
        "S61       10.164      388.100     2.825000e-03      2.853000e-04   \n",
+       "S71      -43.004      137.600     2.408000e-04      1.642000e-05   \n",
+       "S72       13.165      349.200     1.809000e-03      1.849000e-03   \n",
+       "S73        4.579     1061.000     3.225000e-02      1.417000e-01   \n",
+       "S74      -41.351        6.158     1.409000e-04      5.206000e-04   \n",
+       "S75      -18.919      285.600     4.598000e-03      9.482000e-03   \n",
+       "S76      249.467     1214.000     3.340000e-02      8.266000e-03   \n",
+       "S77      -29.224        3.044     4.540000e-06      1.238000e-07   \n",
        "\n",
        "         Loss_NN1      Loss_NN2  \n",
        "S1   4.789000e-01  3.303000e-03  \n",
@@ -652,10 +722,17 @@
        "S58  1.975000e+01  1.754000e+02  \n",
        "S59  2.496000e+00  1.702000e+02  \n",
        "S60  2.342000e-01  1.028000e+01  \n",
-       "S61  7.947000e+00  4.568000e+02  "
+       "S61  7.947000e+00  4.568000e+02  \n",
+       "S71  2.068000e-05  5.935000e+01  \n",
+       "S72  4.890000e-02  6.761000e+02  \n",
+       "S73  9.391000e+02  1.081000e+02  \n",
+       "S74  5.330000e+00  1.661000e-04  \n",
+       "S75  1.491000e+01  7.854000e+00  \n",
+       "S76  1.024000e-01  1.866000e+02  \n",
+       "S77  2.253000e-08  2.505000e-06  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
