--- a/code/Post/post.ipynb
+++ b/code/Post/post.ipynb
@@ -101,15 +101,18 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'c:\\\\Users\\\\achom\\\\Desktop\\\\Main\\\\Code\\\\Scientific-Computing\\\\Physics-Neural-Networks\\\\PINN\\\\.results\\\\SIMS_6\\\\S77\\\\results_values.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\achom\\Desktop\\Main\\Code\\Scientific-Computing\\Physics-Neural-Networks\\PINN\\code\\Post\\post.ipynb Cell 4\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/achom/Desktop/Main/Code/Scientific-Computing/Physics-Neural-Networks/PINN/code/Post/post.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mPost\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mPostcode\u001b[39;00m \u001b[39mimport\u001b[39;00m Born_Ion_Postprocessing \u001b[39mas\u001b[39;00m Postprocessing\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/achom/Desktop/Main/Code/Scientific-Computing/Physics-Neural-Networks/PINN/code/Post/post.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m Post \u001b[39m=\u001b[39m Postprocessing(XPINN_solver, save\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, directory\u001b[39m=\u001b[39mfolder_path)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/achom/Desktop/Main/Code/Scientific-Computing/Physics-Neural-Networks/PINN/code/Post/post.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(os\u001b[39m.\u001b[39;49mpath\u001b[39m.\u001b[39;49mjoin(results_path,\u001b[39m'\u001b[39;49m\u001b[39mresults_values.json\u001b[39;49m\u001b[39m'\u001b[39;49m), \u001b[39m'\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m file:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/achom/Desktop/Main/Code/Scientific-Computing/Physics-Neural-Networks/PINN/code/Post/post.ipynb#W3sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     data \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mload(file)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/achom/Desktop/Main/Code/Scientific-Computing/Physics-Neural-Networks/PINN/code/Post/post.ipynb#W3sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mprint\u001b[39m(json\u001b[39m.\u001b[39mdumps(data, indent\u001b[39m=\u001b[39m\u001b[39m4\u001b[39m))\n",
-      "File \u001b[1;32mc:\\Users\\achom\\Desktop\\Main\\Code\\Scientific-Computing\\Physics-Neural-Networks\\PINN\\.venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py:284\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    277\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    278\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    279\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    281\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    282\u001b[0m     )\n\u001b[1;32m--> 284\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'c:\\\\Users\\\\achom\\\\Desktop\\\\Main\\\\Code\\\\Scientific-Computing\\\\Physics-Neural-Networks\\\\PINN\\\\.results\\\\SIMS_6\\\\S77\\\\results_values.json'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"Gsolv_value\": \"-29.224\",\n",
+      "    \"L2_continuity_u\": \"4.540e-06\",\n",
+      "    \"L2_continuity_du\": \"1.238e-07\",\n",
+      "    \"L2_analytic\": \"3.044e+00\",\n",
+      "    \"Loss_XPINN\": \"2.756e-02\",\n",
+      "    \"Loss_NN1\": \"2.253e-08\",\n",
+      "    \"Loss_NN2\": \"2.505e-06\"\n",
+      "}\n"
      ]
     }
    ],
@@ -143,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
