--- a/tutorials/tutorial.ipynb
+++ b/tutorials/tutorial.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['c:\\\\Users\\\\achom\\\\Desktop\\\\Main\\\\Code\\\\Scientific-Computing\\\\Physics-Neural-Networks\\\\PINN\\\\code', 'c:\\\\Users\\\\achom\\\\Desktop\\\\Main\\\\Code\\\\Scientific-Computing\\\\Physics-Neural-Networks\\\\PINN\\\\tutorials', 'C:\\\\Users\\\\achom\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python38\\\\python38.zip', 'C:\\\\Users\\\\achom\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python38\\\\DLLs', 'C:\\\\Users\\\\achom\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python38\\\\lib', 'C:\\\\Users\\\\achom\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python38', 'c:\\\\Users\\\\achom\\\\Desktop\\\\Main\\\\Code\\\\Scientific-Computing\\\\Physics-Neural-Networks\\\\PINN\\\\.venv', '', 'c:\\\\Users\\\\achom\\\\Desktop\\\\Main\\\\Code\\\\Scientific-Computing\\\\Physics-Neural-Networks\\\\PINN\\\\.venv\\\\lib\\\\site-packages', 'c:\\\\Users\\\\achom\\\\Desktop\\\\Main\\\\Code\\\\Scientific-Computing\\\\Physics-Neural-Networks\\\\PINN\\\\.venv\\\\lib\\\\site-packages\\\\win32', 'c:\\\\Users\\\\achom\\\\Desktop\\\\Main\\\\Code\\\\Scientific-Computing\\\\Physics-Neural-Networks\\\\PINN\\\\.venv\\\\lib\\\\site-packages\\\\win32\\\\lib', 'c:\\\\Users\\\\achom\\\\Desktop\\\\Main\\\\Code\\\\Scientific-Computing\\\\Physics-Neural-Networks\\\\PINN\\\\.venv\\\\lib\\\\site-packages\\\\Pythonwin']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import logging\n",
@@ -27,8 +19,7 @@
     "path_components = current_directory.split(os.path.sep)\n",
     "main_directory = os.path.sep.join(path_components[:-1])\n",
     "code_directory = os.path.join(main_directory,'code')\n",
-    "sys.path.insert(0,code_directory)\n",
-    "print(sys.path)"
+    "sys.path.insert(0,code_directory)"
    ]
   },
   {
