--- a/code/Post/post.ipynb
+++ b/code/Post/post.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,9 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/martinachondo/PINN/code\n",
+      "/home/martinachondo/PINN/.results/12-03/BS_ACT\n"
+     ]
+    }
+   ],
    "source": [
     "simulation_name = 'BS_ACT'\n",
     "simulation_folder = '12-03'\n",
@@ -57,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +96,7 @@
       "      0       1.400       0.000     0.000    12.566    12.566    72.382\n",
       "TRIANGULATION...\n",
       "    Component 0\n",
-      "   contact faces isolated vertices 1858693632\n",
+      "   contact faces isolated vertices 1847003168\n",
       "    component#, vertices,  edges,  faces, genus, density\n",
       "        0            460    1374     916    0    36.606\n",
       "        Time Triangulation real: 0.00 user: 0.00 sys: 0.00\n",
@@ -102,40 +111,40 @@
       "Number of Faces: 916\n",
       "Number of Regions: 1\n",
       "Number of Holes: 0\n",
-      "Region point: Tensor({0}:0.0276667; {1}:-0.809667; {2}:0.177333)\n",
+      "Region point: Tensor({0}:0.0276667; {1}:-0.828333; {2}:0.0406667)\n",
       "Warning:  Unknown switch --.\n",
       "Delaunizing vertices...\n",
-      "Delaunay seconds:  0.017832\n",
+      "Delaunay seconds:  0.017202\n",
       "Creating surface mesh ...\n",
-      "Surface mesh seconds:  0.001612\n",
+      "Surface mesh seconds:  0.001468\n",
       "Recovering boundaries...\n",
-      "Boundary recovery seconds:  0.00214\n",
+      "Boundary recovery seconds:  0.002563\n",
       "Removing exterior tetrahedra ...\n",
       "Spreading region attributes.\n",
-      "Exterior tets removal seconds:  0.000328\n",
+      "Exterior tets removal seconds:  0.000393\n",
       "Recovering Delaunayness...\n",
-      "Delaunay recovery seconds:  0.018287\n",
+      "Delaunay recovery seconds:  0.012627\n",
       "Refining mesh...\n",
-      "  613 insertions, added 204 points, 10716 tetrahedra in queue.\n",
-      "  204 insertions, added 20 points, 11008 tetrahedra in queue.\n",
-      "  272 insertions, added 19 points, 11178 tetrahedra in queue.\n",
-      "  362 insertions, added 18 points, 11123 tetrahedra in queue.\n",
-      "  483 insertions, added 9 points, 10527 tetrahedra in queue.\n",
-      "  644 insertions, added 10 points, 9168 tetrahedra in queue.\n",
-      "  858 insertions, added 5 points, 5099 tetrahedra in queue.\n",
-      "Refinement seconds:  0.023266\n",
+      "  613 insertions, added 231 points, 11562 tetrahedra in queue.\n",
+      "  204 insertions, added 19 points, 11841 tetrahedra in queue.\n",
+      "  272 insertions, added 15 points, 11903 tetrahedra in queue.\n",
+      "  362 insertions, added 12 points, 11706 tetrahedra in queue.\n",
+      "  483 insertions, added 10 points, 11142 tetrahedra in queue.\n",
+      "  644 insertions, added 8 points, 9898 tetrahedra in queue.\n",
+      "  858 insertions, added 9 points, 6474 tetrahedra in queue.\n",
+      "Refinement seconds:  0.028955\n",
       "Smoothing vertices...\n",
-      "Mesh smoothing seconds:  0.038058\n",
+      "Mesh smoothing seconds:  0.03428\n",
       "Improving mesh...\n",
-      "Mesh improvement seconds:  0.001349\n",
+      "Mesh improvement seconds:  0.001199\n",
       "\n",
       "Writing nodes.\n",
       "Writing elements.\n",
       "Writing faces.\n",
       "Writing edges.\n",
       "\n",
-      "Output seconds:  0.000342\n",
-      "Total running seconds:  0.103623\n",
+      "Output seconds:  0.000309\n",
+      "Total running seconds:  0.099202\n",
       "\n",
       "Statistics:\n",
       "\n",
@@ -145,13 +154,13 @@
       "  Input holes: 0\n",
       "  Input regions: 1\n",
       "\n",
-      "  Mesh points: 747\n",
-      "  Mesh tetrahedra: 3025\n",
-      "  Mesh faces: 6508\n",
+      "  Mesh points: 768\n",
+      "  Mesh tetrahedra: 3165\n",
+      "  Mesh faces: 6788\n",
       "  Mesh faces on exterior boundary: 916\n",
       "  Mesh faces on input facets: 916\n",
       "  Mesh edges on input segments: 1374\n",
-      "  Steiner points inside domain: 287\n",
+      "  Steiner points inside domain: 308\n",
       "\n",
       "Found 1 meshes in 1\n",
       "Found 1 meshes in 2\n",
@@ -159,43 +168,43 @@
       "Number of Faces: 2196\n",
       "Number of Regions: 1\n",
       "Number of Holes: 1\n",
-      "Region point: Tensor({0}:-0.111173; {1}:0.282996; {2}:0.772939)\n",
+      "Region point: Tensor({0}:-0.276793; {1}:-0.668949; {2}:-0.272852)\n",
       "Region point: Tensor({0}:-4.19784; {1}:6.46106; {2}:0.535858)\n",
       "Warning:  Unknown switch --.\n",
       "Delaunizing vertices...\n",
-      "Delaunay seconds:  0.021884\n",
+      "Delaunay seconds:  0.028345\n",
       "Creating surface mesh ...\n",
-      "Surface mesh seconds:  0.002244\n",
+      "Surface mesh seconds:  0.003283\n",
       "Recovering boundaries...\n",
-      "Boundary recovery seconds:  0.003456\n",
+      "Boundary recovery seconds:  0.005433\n",
       "Removing exterior tetrahedra ...\n",
       "Spreading region attributes.\n",
-      "Exterior tets removal seconds:  0.001145\n",
+      "Exterior tets removal seconds:  0.001651\n",
       "Recovering Delaunayness...\n",
-      "Delaunay recovery seconds:  0.004195\n",
+      "Delaunay recovery seconds:  0.006344\n",
       "Refining mesh...\n",
-      "  1468 insertions, added 667 points, 34370 tetrahedra in queue.\n",
-      "  488 insertions, added 70 points, 35600 tetrahedra in queue.\n",
-      "  651 insertions, added 99 points, 37384 tetrahedra in queue.\n",
-      "  868 insertions, added 97 points, 38778 tetrahedra in queue.\n",
-      "  1157 insertions, added 90 points, 39358 tetrahedra in queue.\n",
-      "  1542 insertions, added 81 points, 38695 tetrahedra in queue.\n",
-      "  2055 insertions, added 72 points, 35885 tetrahedra in queue.\n",
-      "  2740 insertions, added 84 points, 29582 tetrahedra in queue.\n",
-      "  3652 insertions, added 82 points, 14347 tetrahedra in queue.\n",
-      "Refinement seconds:  0.07283\n",
+      "  1468 insertions, added 639 points, 33410 tetrahedra in queue.\n",
+      "  488 insertions, added 72 points, 34867 tetrahedra in queue.\n",
+      "  651 insertions, added 91 points, 36531 tetrahedra in queue.\n",
+      "  868 insertions, added 65 points, 37012 tetrahedra in queue.\n",
+      "  1157 insertions, added 98 points, 37838 tetrahedra in queue.\n",
+      "  1542 insertions, added 90 points, 37313 tetrahedra in queue.\n",
+      "  2055 insertions, added 68 points, 34302 tetrahedra in queue.\n",
+      "  2740 insertions, added 79 points, 27512 tetrahedra in queue.\n",
+      "  3652 insertions, added 54 points, 7278 tetrahedra in queue.\n",
+      "Refinement seconds:  0.09484\n",
       "Smoothing vertices...\n",
-      "Mesh smoothing seconds:  0.097411\n",
+      "Mesh smoothing seconds:  0.117976\n",
       "Improving mesh...\n",
-      "Mesh improvement seconds:  0.002869\n",
+      "Mesh improvement seconds:  0.004171\n",
       "\n",
       "Writing nodes.\n",
       "Writing elements.\n",
       "Writing faces.\n",
       "Writing edges.\n",
       "\n",
-      "Output seconds:  0.000626\n",
-      "Total running seconds:  0.206996\n",
+      "Output seconds:  0.000948\n",
+      "Total running seconds:  0.263256\n",
       "\n",
       "Statistics:\n",
       "\n",
@@ -205,13 +214,13 @@
       "  Input holes: 1\n",
       "  Input regions: 1\n",
       "\n",
-      "  Mesh points: 2473\n",
-      "  Mesh tetrahedra: 11575\n",
-      "  Mesh faces: 24248\n",
+      "  Mesh points: 2375\n",
+      "  Mesh tetrahedra: 10961\n",
+      "  Mesh faces: 23020\n",
       "  Mesh faces on exterior boundary: 2196\n",
       "  Mesh faces on input facets: 2196\n",
       "  Mesh edges on input segments: 3294\n",
-      "  Steiner points inside domain: 1371\n",
+      "  Steiner points inside domain: 1273\n",
       "\n",
       "Mesh initialization ready\n",
       "PDEs and datasets ready\n"
@@ -245,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
