--- a/code/Post/Postcode.ipynb
+++ b/code/Post/Postcode.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
       "      0       1.400       0.000     0.000    12.566    12.566    72.382\n",
       "TRIANGULATION...\n",
       "    Component 0\n",
-      "   contact faces isolated vertices 1190937824\n",
+      "   contact faces isolated vertices 234335120\n",
       "    component#, vertices,  edges,  faces, genus, density\n",
       "        0            460    1374     916    0    36.606\n",
       "        Time Triangulation real: 0.00 user: 0.00 sys: 0.00\n",
@@ -106,33 +106,34 @@
       "Number of Faces: 916\n",
       "Number of Regions: 1\n",
       "Number of Holes: 0\n",
-      "Region point: Tensor({0}:-0.0276667; {1}:0.0273333; {2}:0.827)\n",
+      "Region point: Tensor({0}:-0.0276667; {1}:-0.746766; {2}:0.3563)\n",
       "Warning:  Unknown switch --.\n",
+      "Found 1 meshes in 1\n",
       "Delaunizing vertices...\n",
-      "Delaunay seconds:  0.011636\n",
+      "Delaunay seconds:  0.011504\n",
       "Creating surface mesh ...\n",
-      "Surface mesh seconds:  0.001227\n",
+      "Surface mesh seconds:  0.001192\n",
       "Recovering boundaries...\n",
-      "Boundary recovery seconds:  0.002263\n",
+      "Boundary recovery seconds:  0.002088\n",
       "Removing exterior tetrahedra ...\n",
       "Spreading region attributes.\n",
-      "Exterior tets removal seconds:  0.000345\n",
+      "Exterior tets removal seconds:  0.000343\n",
       "Recovering Delaunayness...\n",
-      "Delaunay recovery seconds:  0.009132\n",
+      "Delaunay recovery seconds:  0.008426\n",
       "Refining mesh...\n",
-      "Refinement seconds:  0.017236\n",
+      "Refinement seconds:  0.017471\n",
       "Smoothing vertices...\n",
-      "Mesh smoothing seconds:  0.017659\n",
+      "Mesh smoothing seconds:  0.018479\n",
       "Improving mesh...\n",
-      "Mesh improvement seconds:  0.000724\n",
+      "Mesh improvement seconds:  0.000758\n",
       "\n",
       "Writing nodes.\n",
       "Writing elements.\n",
       "Writing faces.\n",
       "Writing edges.\n",
       "\n",
-      "Output seconds:  0.000176\n",
-      "Total running seconds:  0.060642\n",
+      "Output seconds:  0.000179\n",
+      "Total running seconds:  0.060586\n",
       "\n",
       "Statistics:\n",
       "\n",
@@ -142,67 +143,66 @@
       "  Input holes: 0\n",
       "  Input regions: 1\n",
       "\n",
-      "  Mesh points: 626\n",
-      "  Mesh tetrahedra: 2316\n",
-      "  Mesh faces: 5090\n",
+      "  Mesh points: 637\n",
+      "  Mesh tetrahedra: 2376\n",
+      "  Mesh faces: 5210\n",
       "  Mesh faces on exterior boundary: 916\n",
       "  Mesh faces on input facets: 916\n",
       "  Mesh edges on input segments: 1374\n",
-      "  Steiner points inside domain: 166\n",
+      "  Steiner points inside domain: 177\n",
       "\n",
-      "Found 1 meshes in 1\n",
       "Found 1 meshes in 2\n",
-      "Number of vertices: 3022\n",
-      "Number of Faces: 6036\n",
+      "Number of vertices: 1102\n",
+      "Number of Faces: 2196\n",
       "Number of Regions: 1\n",
       "Number of Holes: 1\n",
-      "Region point: Tensor({0}:-0.490764; {1}:0.645504; {2}:0.177502)\n",
-      "Region point: Tensor({0}:-4.47854; {1}:7.06479; {2}:0.293904)\n",
+      "Region point: Tensor({0}:0.0276667; {1}:-0.591; {2}:-0.581667)\n",
+      "Region point: Tensor({0}:-4.19792; {1}:6.46119; {2}:0.535869)\n",
       "Warning:  Unknown switch --.\n",
       "Delaunizing vertices...\n",
-      "Delaunay seconds:  0.02635\n",
+      "Delaunay seconds:  0.021861\n",
       "Creating surface mesh ...\n",
-      "Surface mesh seconds:  0.004734\n",
+      "Surface mesh seconds:  0.002629\n",
       "Recovering boundaries...\n",
-      "Boundary recovery seconds:  0.006845\n",
+      "Boundary recovery seconds:  0.003865\n",
       "Removing exterior tetrahedra ...\n",
       "Spreading region attributes.\n",
-      "Exterior tets removal seconds:  0.001825\n",
+      "Exterior tets removal seconds:  0.001279\n",
       "Recovering Delaunayness...\n",
-      "Delaunay recovery seconds:  0.006953\n",
+      "Delaunay recovery seconds:  0.005181\n",
       "Refining mesh...\n",
-      "  4028 insertions, added 3987 points, 145414 tetrahedra in queue.\n",
-      "  1341 insertions, added 1317 points, 172094 tetrahedra in queue.\n",
-      "  1787 insertions, added 1718 points, 190485 tetrahedra in queue.\n",
-      "Refinement seconds:  0.213554\n",
+      "  1468 insertions, added 1416 points, 51989 tetrahedra in queue.\n",
+      "  488 insertions, added 400 points, 59042 tetrahedra in queue.\n",
+      "  651 insertions, added 457 points, 57056 tetrahedra in queue.\n",
+      "Refinement seconds:  0.075258\n",
       "Smoothing vertices...\n",
-      "Mesh smoothing seconds:  0.412537\n",
+      "Mesh smoothing seconds:  0.120409\n",
       "Improving mesh...\n",
-      "Mesh improvement seconds:  0.014948\n",
+      "Mesh improvement seconds:  0.004495\n",
       "\n",
       "Writing nodes.\n",
       "Writing elements.\n",
       "Writing faces.\n",
       "Writing edges.\n",
       "\n",
-      "Output seconds:  0.002306\n",
-      "Total running seconds:  0.690216\n",
+      "Output seconds:  0.000439\n",
+      "Total running seconds:  0.235715\n",
       "\n",
       "Statistics:\n",
       "\n",
-      "  Input points: 3022\n",
-      "  Input facets: 6036\n",
-      "  Input segments: 9054\n",
+      "  Input points: 1102\n",
+      "  Input facets: 2196\n",
+      "  Input segments: 3294\n",
       "  Input holes: 1\n",
       "  Input regions: 1\n",
       "\n",
-      "  Mesh points: 11412\n",
-      "  Mesh tetrahedra: 60990\n",
-      "  Mesh faces: 124998\n",
-      "  Mesh faces on exterior boundary: 6036\n",
-      "  Mesh faces on input facets: 6036\n",
-      "  Mesh edges on input segments: 9054\n",
-      "  Steiner points inside domain: 8390\n",
+      "  Mesh points: 3639\n",
+      "  Mesh tetrahedra: 18847\n",
+      "  Mesh faces: 38792\n",
+      "  Mesh faces on exterior boundary: 2196\n",
+      "  Mesh faces on input facets: 2196\n",
+      "  Mesh edges on input segments: 3294\n",
+      "  Steiner points inside domain: 2537\n",
       "\n",
       "Mesh initialization ready\n",
       "PDEs and datasets ready\n",
@@ -222,18 +222,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenMesh not available\n",
+      "No module named 'openmesh'\n"
+     ]
+    }
+   ],
    "source": [
-    "Iter = 2\n",
+    "Iter = 10\n",
     "simulation.load_model(folder_path,results_path,Iter, save=False)\n",
     "Post = simulation.Post"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -242,12 +251,12 @@
      "text": [
       "{\n",
       "    \"Gsolv_value\": \"0.000\",\n",
-      "    \"L2_continuity_u\": \"6.119e-01\",\n",
-      "    \"L2_continuity_du\": \"1.818e-01\",\n",
-      "    \"Loss_XPINN\": \"1.465e+04\",\n",
-      "    \"Loss_NN1\": \"1.465e+04\",\n",
-      "    \"Loss_NN2\": \"5.662e-01\",\n",
-      "    \"L2_analytic\": \"3.056e+02\"\n",
+      "    \"L2_continuity_u\": \"3.252e-01\",\n",
+      "    \"L2_continuity_du\": \"4.035e-01\",\n",
+      "    \"Loss_XPINN\": \"9.264e+02\",\n",
+      "    \"Loss_NN1\": \"9.259e+02\",\n",
+      "    \"Loss_NN2\": \"6.796e-01\",\n",
+      "    \"L2_analytic\": \"2.129e+02\"\n",
       "}\n"
      ]
     }
