--- a/code/Post/Post_Template.ipynb
+++ b/code/Post/Post_Template.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Post processing framework"
+    "## Post processing jupyter notebook"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Using the postprocessing object"
+    "#### Usage of the postprocessing object"
    ]
   },
   {
