--- a/tutorials/tutorial.ipynb
+++ b/tutorials/tutorial.ipynb
@@ -27,6 +27,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tutorial jupyter notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Specify the simulation inputs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -120,6 +134,13 @@
     "simulation.N_precond = 3\n",
     "simulation.iters_save_model = 6\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create the simulation"
    ]
   },
   {
@@ -277,6 +298,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Solve the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -298,6 +326,13 @@
    ],
    "source": [
     "simulation.solve_model()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Postprocessing object"
    ]
   },
   {
@@ -362,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.0"
   },
   "orig_nbformat": 4
  },
